--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -1,3 +1,4 @@
+$ancho: 90%;
 * {
     margin: 0%;
     padding: 0%;
@@ -12,7 +13,7 @@ body{
     color: aliceblue;
     margin: 2rem auto;
     .headerInicio{
-        width: 90%;
+        width: $ancho;
         margin: 20px auto;
         grid-area: headerInicio;
         @import "menuinicial";
@@ -21,15 +22,16 @@ body{
         grid-area: mainInicio;
         .intro{
             background-color:rgb(80, 103, 162);
-            line-height: 25px;
+            line-height: 30px;
+            font-size: 3rem;
             border: 2px black solid;
-            width: 80%;
+            width: $ancho - 10%;
             padding: 2rem;
-            margin: 2rem auto;
             text-align: justify;
             font-family: Georgia, 'Times New Roman', Times, serif;
             overflow: auto; 
             opacity: 75%;
+            margin: 2rem auto;
             margin-bottom: 10rem;
         }
         .carousel{
@@ -37,9 +39,20 @@ body{
             display: inline-block;
             margin: 2rem auto;
         }
+        .packs{
+            width: $ancho;
+            margin: 2rem auto;
+            padding: 4rem auto;
+            display: flex;
+            justify-content: space-evenly;
+            opacity: 85%;
+            .packs__1{
+                padding: 1rem;
+            }
+        }
     }
     .footerInicio{
-        width: 90%;
+        width: $ancho;
         grid-area: footerInicio;
         .sucursales{
             display: flex;
@@ -53,9 +66,9 @@ body{
     }
 }
 .ContenedorAbout{
-    width: 90%;
+    width: $ancho;
     .HAbout{
-        width: 90%;
+        width: $ancho;
         margin: auto;
         grid-area: HAbout;
         @import "menuinicial";
@@ -64,7 +77,7 @@ body{
         background-color:rgb(80, 103, 162);
         line-height: 25px;
         border: 2px black solid;
-        width: 90%;
+        width: $ancho;
         height: 80%;
         padding: 1rem;
         margin: 2rem auto;
@@ -75,7 +88,7 @@ body{
         opacity: 85%;
     }
     .contGrid{
-        width: 90%;
+        width: $ancho;
         height: auto;
         margin: 20px auto;
         display: grid;
@@ -87,7 +100,7 @@ body{
         "foto3 videonos videonos foto4";
         .videonos{
             grid-area: videonos;
-            width: 90%;
+            width: $ancho - 5%;
             margin: 20px auto;
         }
         .foto1{
@@ -112,28 +125,21 @@ body{
     }
 }
 .contenedorcontacto{
-    width: 90%;
+    width: $ancho;
     margin: 4rem auto;
     .Hcontact{
-            width: 90%;
+            width: $ancho;
             grid-area: Hcontact;
             @import "menuinicial";
     }
     .Forcoment{
-        width: 90%;
+        width: $ancho;
         grid-area: Forcoment;
     }
     .footcontact{
-        width: 90%;
+        width: $ancho;
         grid-area: footcontact;
-        .sucursales{
-            display: flex;
-            justify-content: space-around;
-            margin: 4rem auto;
-            .sucursales__ubi__map:hover{
-                transform: scale(1.2, 1.2);
-            }
-        }
+        @extend .sucursales;
         .p-1{
             @import "menu2";
         }
@@ -141,7 +147,7 @@ body{
 }
 @media screen and (max-width:480px) {
     .contenedorcontacto {
-        width: 90%;
+        width: $ancho;
         display: grid;
         grid-template-columns: 1fr;
         grid-template-rows: auto 1fr auto;
@@ -153,7 +159,7 @@ body{
 }
 @media screen and (max-width:480px) {
     .ContenedorAbout {
-        width: 90%;
+        width: $ancho;
         display: grid;
         grid-template-columns: 1fr;
         grid-template-rows: auto auto auto 1fr;
