--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -117,10 +117,10 @@ body{
         }
     }
 }
-.shopcontainer{
+.shopContainer{
     width: $ancho;
     margin: 20px auto;
-        .shopheader{
+        .shopHeader{
             @import "menuinicial";
     }
 }
