--- a/css/estilo.css
+++ b/css/estilo.css
@@ -212,7 +212,8 @@ body .footerInicio .menu2 li a:hover {
   -ms-grid-rows: 2fr 2fr;
       grid-template-rows: 2fr 2fr;
   grid-gap: 2rem;
-      grid-template-areas: "foto1 videonos videonos foto2" "foto3 videonos videonos foto4";
+      grid-template-areas: "foto1 videonos videonos foto2"
+ "foto3 videonos videonos foto4";
 }
 
 .ContenedorAbout .contGrid .videonos {
@@ -279,16 +280,16 @@ body .footerInicio .menu2 li a:hover {
   border-radius: 20%;
 }
 
-.shopcontainer {
+.shopContainer {
   width: 90%;
   margin: 20px auto;
 }
 
-.shopcontainer .shopheader .menuinicial {
+.shopContainer .shopHeader .menuinicial {
   padding: 2rem;
 }
 
-.shopcontainer .shopheader .menuinicial ul {
+.shopContainer .shopHeader .menuinicial ul {
   list-style: none;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -301,26 +302,26 @@ body .footerInicio .menu2 li a:hover {
   text-align: center;
 }
 
-.shopcontainer .shopheader .menuinicial ul li {
+.shopContainer .shopHeader .menuinicial ul li {
   font-size: 1.5rem;
 }
 
-.shopcontainer .shopheader .menuinicial ul li:hover ul {
+.shopContainer .shopHeader .menuinicial ul li:hover ul {
   display: block;
 }
 
-.shopcontainer .shopheader .menuinicial ul li ul {
+.shopContainer .shopHeader .menuinicial ul li ul {
   display: none;
 }
 
-.shopcontainer .shopheader .menuinicial ul li a {
+.shopContainer .shopHeader .menuinicial ul li a {
   display: inline-block;
   color: aquamarine;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   font-style: bold;
 }
 
-.shopcontainer .shopheader .menuinicial ul li a:hover {
+.shopContainer .shopHeader .menuinicial ul li a:hover {
   color: #9b61d2;
 }
 
@@ -432,7 +433,9 @@ body .footerInicio .menu2 li a:hover {
         grid-template-columns: 1fr;
     -ms-grid-rows: auto 1fr auto;
         grid-template-rows: auto 1fr auto;
-        grid-template-areas: "Hcontact" "Forcoment" "footcontact";
+        grid-template-areas: "Hcontact"
+ "Forcoment"
+ "footcontact";
   }
 }
 
@@ -445,7 +448,14 @@ body .footerInicio .menu2 li a:hover {
         grid-template-columns: 1fr;
     -ms-grid-rows: auto auto auto 1fr;
         grid-template-rows: auto auto auto 1fr;
-        grid-template-areas: "HAbout" "main" "foto1" "foto2" "foto3" "foto4" "videonos" "Fabout";
+        grid-template-areas: "HAbout"
+ "main"
+ "foto1"
+ "foto2"
+ "foto3"
+ "foto4"
+ "videonos"
+ "Fabout";
   }
 }
 /*# sourceMappingURL=estilo.css.map */
