--- a/scss/_menuinicial.scss
+++ b/scss/_menuinicial.scss
@@ -1,5 +1,5 @@
-.menuinicial{ 
-            padding: 2rem;
+@mixin menuinicial {
+          padding: 2rem;
                 ul{
                 list-style: none;
                 display: flex;
